[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player1.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 8 )

[node name="Player1" type="Area2D"]
script = ExtResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LogCollision" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LogCollision"]
shape = SubResource( 3 )

[node name="EnemyCollide" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollide"]
shape = SubResource( 4 )

[node name="EOLBCollide" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EOLBCollide"]
shape = SubResource( 5 )

[node name="WaterCollide" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterCollide"]
shape = SubResource( 6 )

[connection signal="area_entered" from="LogCollision" to="." method="_on_LogCollision_area_entered"]
[connection signal="area_exited" from="LogCollision" to="." method="_on_LogCollision_area_exited"]
[connection signal="area_entered" from="EnemyCollide" to="." method="_on_EnemyCollide_area_entered"]
[connection signal="area_entered" from="EOLBCollide" to="." method="_on_EOLBCollide_area_entered"]
[connection signal="area_entered" from="WaterCollide" to="." method="_on_WaterCollide_area_entered"]
